force-app/main/default/objects/Demo20__c/Demo20__c.object-meta.xml
<CustomObject>
    <label>Demo20</label>
    <nameField>
        <label>Demo20 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demo20s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>