force-app/main/default/objects/Demo20__c/fields/Demo20_Field_1__c.field-meta.xml
<CustomField>
    <fullName>Demo20_Field_1__c</fullName>
    <label>Demo20 Field 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>