force-app/main/default/objects/Demo20__c/fields/Demo20_Field_2__c.field-meta.xml
<CustomField>
    <fullName>Demo20_Field_2__c</fullName>
    <label>Demo20 Field 2</label>
    <type>Date</type>
</CustomField>