force-app/main/default/objects/Demo20__c/fields/Demo20_Field_3__c.field-meta.xml
<CustomField>
    <fullName>Demo20_Field_3__c</fullName>
    <label>Demo20 Field 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>